# statsbomb-rust

./: Cargo.toml  README.md
src/: events.rs  io.rs  main.rs
src/events/: events.rs  parsers.rs
