[package]
name = "statsbomb-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.31"
num = "0.4.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
